--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
           <div class="col-lg-6">
             <h1 class=" display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi I'm rajithlingam</h1>
-            <p class="lead">MERN-STACK WEB DEVELOPER</p>
+            <p class="lead">PERN-STACK WEB DEVELOPER</p>
           </div>
         </div>
 
@@ -25,10 +25,10 @@
             <div class="col-md-7 order-md-2">
               <h2 class=" display-5 fw-bold text-body-emphasis lh-1 mb-3 mt-5">About Me</h2>
               <p class="lead">
-                Hey there! I'm <strong>rajithlingam</strong>, a budding MERN-stack web developer with a passion for crafting engaging digital experiences. I thrive on challenges and love diving into the world of code to bring ideas to life. Let's collaborate and create something amazing together!</p>
+                Hey there! I'm <strong>rajithlingam</strong>, a budding PERN-stack web developer with a passion for crafting engaging digital experiences. I thrive on challenges and love diving into the world of code to bring ideas to life. Let's collaborate and create something amazing together!</p>
             </div>
-            <div class=" col-md-5 order-md-1">
-              <img src="./assets/images/mern-stack.png" class="rl_img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="300" height="160" loading="lazy">
+            <div class="PERN-LOGO col-md-5 order-md-1">
+              <img class="PERN-LOGO  d-block mx-lg-auto img-fluid" src="./assets/images/PERN-STACK_LOGO.png" alt="Bootstrap Themes" width="300" height="160" loading="lazy">
      
             </div>
         </div>
@@ -38,12 +38,12 @@
   <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 mt-5">Skills</h2>
 
   <div class="d-flex text-body-secondary pt-3">
-    <img class="bd-placeholder-img flex-shrink-0 me-2 rounded" src="./assets/images/mern-stack.png" width="32" height="32" >
+    <img class="bd-placeholder-img flex-shrink-0 me-2 rounded" src="./assets/images/PERN-STACK_LOGO.png" width="32" height="32" >
     <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
       <div class="d-flex justify-content-between">
-        <strong class="text-gray-dark rl_progress_bar">MERN-stack Development: </strong>
+        <strong class="text-gray-dark rl_progress_bar">PERN-stack Development: </strong>
       </div>
-      <span class="d-block ">Proficient in MongoDB, Express.js, React.js, and Node.js.</span>
+      <span class="d-block ">Proficient in PostgreSQL, Express.js, React.js, and Node.js.</span>
     </div>
   </div>
 
