--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
 
           <div class="row featurette">
-            <div class="col-md-7 order-md-2">
+            <div class=" col-md-7 order-md-2">
               <h2 class=" display-5 fw-bold text-body-emphasis lh-1 mb-3 mt-5">About Me</h2>
               <p class="lead">
                 Hey there! I'm <strong>rajithlingam</strong>, a budding PERN-stack web developer with a passion for crafting engaging digital experiences. I thrive on challenges and love diving into the world of code to bring ideas to life. Let's collaborate and create something amazing together!</p>
             </div>
-            <div class="PERN-LOGO col-md-5 order-md-1">
-              <img class="PERN-LOGO  d-block mx-lg-auto img-fluid" src="./assets/images/PERN-STACK_LOGO.png" alt="Bootstrap Themes" width="300" height="160" loading="lazy">
+            <div class="PERN_LOGO col-md-5 order-md-1">
+              <img class="PERN_LOGO  d-block mx-lg-auto img-fluid" src="./assets/images/PERN-STACK_LOGO.png" alt="Bootstrap Themes" width="300" height="160" loading="lazy">
      
             </div>
         </div>
