2-ND commit in 13-4-24

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="d-flex justify-content-between">
         <strong class="text-gray-dark rl_progress_bar">Database Management:</strong>
       </div>
-      <span class="d-block ">Knowledgeable in MongoDB and NoSQL databases, including schema design, CRUD operations, indexing, and querying.</span>
+      <span class="d-block ">Knowledgeable in SQL and PostgreSQL databases, including schema design, CRUD operations, indexing, and querying.</span>
     </div>
   </div>
 
